# together_working

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  INSTALL.md  LICENSE  PRODUCT.md  README.md  package.json  skill.sh
.claude/: instructions.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: instructions.md
.gemini/: instructions.md
.together/: providers.override.example.json  providers.override.json
agents/: agy.md  claude.md  cmdc.md  codex.md  gemini.md  generic-agent.md
assets/: logo-placeholder.md  report-preview.md  screenshots.md
cli/: Cargo.toml
cli/src/: client.rs  main.rs  tui.rs
cli/src/ui/: agents.rs  format.rs  layout.rs  mod.rs  pty.rs  state.rs  tasks.rs  theme.rs  wizard.rs
commands/: contract.md  doctor.md  govern.md  plan.md  report.md  route.md  scan.md  validate.md  verify.md
core/: Cargo.toml
daemon/: Cargo.toml
docs/: 00-product-brief.md  01-srs.md  02-architecture.md  03-tech-stack.md  04-domain-model.md  05-terminal-ui.md  06-functional-spec.md  07-roadmap.md  08-ai-development-guide.md  09-repository-structure.md  10-decisions-and-open-questions.md  architecture.md  benchmarking.md  distribution.md  enforcement.md  governance.md  health-check.md  merge-decision.md  observability.md  permission-model.md  quality-gate.md  registry.md  release.md  reporting.md  routing.md  task-contract.md  task-workflow.md  workflow-control.md
examples/: agent-registry.json  agent-report.md  last-known-good.json  merge-decision.example.json  providers.override.example.json  runtime-state.json  (+2 more)
(+108 files in other folders)
