[package]
name = "cli"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "together"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
interprocess = "2.2.1"
core = { path = "../core" }
daemon = { path = "../daemon" }
serde_json = "1.0.150"
rusqlite = { version = "0.31.0", features = ["bundled"] }
